fixed nav display property for overflow

--- a/assets/contact.css
+++ b/assets/contact.css
@@ -40,16 +40,10 @@ body {
   margin: 30px 0;
 }
 
-#menuList {
-  overflow: hidden;
-  transition: 0.5s;
-}
-
 .menu-icon {
-  display: none;
-  display: block;
   width: 25px;
   cursor: pointer;
+  display: none;
 }
 
 nav {
@@ -66,7 +60,7 @@ nav ul li {
 nav ul li a {
   text-decoration: none;
   color: #000;
-  font-size: 14px;
+  font-size: 21px;
   font-weight: bold;
 }
 
@@ -217,8 +211,17 @@ nav ul li a:hover {
     color: #fff;
   }
 
+  .menu-icon {
+    display: block;
+  }
+
+  #menuList {
+    overflow: hidden;
+    transition: 0.5s;
+  }
+
   .contactContainer {
-    margin: 40px 15px;
+    margin: 0px auto;
     height: 100%;
   }
 
