--- a/assets/style.css
+++ b/assets/style.css
@@ -191,7 +191,7 @@ nav ul li a:hover {
 
     .row {
         flex-direction: column;
-        margin: 50px 0;
+        margin: 5px 0;
     }
 
     .col-2 {
